tests/toy/neg/000863_mutation.toylang
program a = { a if then sleep; } .
